--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,7 +21,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r req.txt
     - name: Run Tests
       run: |
-        python manage.py runserver
+        python manage.py test
+
